--- a/templates/base.html
+++ b/templates/base.html
@@ -1,22 +1,23 @@
-<!DOCTYPE html>
 {% load static %}
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Picsart Academy</title>
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400"
-rel="stylesheet">
+<title>Django blog</title>
+<link href="https://fonts.googleapis.com/css?family=\
+Source+Sans+Pro:400" rel="stylesheet">
 <link href="{% static 'css/base.css' %}" rel="stylesheet">
 </head>
 <body>
+<div>
 <header>
-  <h1>
-    <a href="{% url 'home' %}"> Picsart  Academy</a>
-  </h1>
+    <div class="nav-left">
+<h1><a href="{% url 'home' %}">Django blog</a></h1>
+</div>
+<div class="nav-right">
+<a href="{% url 'post_new' %}">+ New Blog Post</a>
+</div>
 </header>
-<div >
-  {% block content %}
-  {% endblock content %}
+{% block content %}
+{% endblock content %}
 </div>
 </body>
 </html>
